--- a/Game.css
+++ b/Game.css
@@ -8,7 +8,8 @@ body {
     font-family: "Metamorphous", serif;
     font-weight: 400;
     font-style: normal;
-    }
+    background: radial-gradient(circle at top, #1a2b2e, #0a0f12, #000000);
+}
 
 .navbar {
     position: fixed;
@@ -32,7 +33,6 @@ body {
     z-index: 999;
 }
 
-/* LOGO stays fixed — does not scroll */
 .logo {
     flex: 0 0 auto;
     font-size: 1.3rem;
@@ -41,8 +41,7 @@ body {
     white-space: nowrap;
 }
 
-/* NAV LINKS — scrollable */
-/* Scrollable nav */
+
 .nav-scroll {
     flex: 1;
     display: flex;
@@ -50,7 +49,7 @@ body {
     white-space: nowrap;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    scroll-snap-type: x mandatory;   /* snapping */
+    scroll-snap-type: x mandatory;
 
 }
 
@@ -58,9 +57,9 @@ body {
     display: none;
 }
 
-/* Only show 4 items at a time */
+
 .nav-scroll a {
-    flex: 0 0 25%;  /* 100% / 4 = 25% → exactly 4 visible */
+    flex: 0 0 25%;
     text-align: center;
 
     padding: 5px 0;
@@ -97,10 +96,22 @@ nav a:hover {
 }
 
 main {
-    text-align: center;
+    text-align: left;
     padding: 60px 20px;
     max-width: 1000px;
     margin: auto;
+}
+.hero{
+    display: flex;
+    flex-direction: row;
+    gap: 70px;
+}
+#map{
+    display: flex;
+    justify-content: flex-end;
+    height: 200px;
+    width: 310px;
+    border-radius: 15px;
 }
 
 h1, h2 {
