--- a/Game.css
+++ b/Game.css
@@ -9,6 +9,7 @@ body {
     font-weight: 400;
     font-style: normal;
     background: radial-gradient(circle at top, #1a2b2e, #0a0f12, #000000);
+    height: auto;
 }
 
 .navbar {
@@ -59,7 +60,7 @@ body {
 
 
 .nav-scroll a {
-    flex: 0 0 25%;
+    flex: 0 0 22%;
     text-align: center;
 
     padding: 5px 0;
@@ -112,16 +113,41 @@ main {
     height: 200px;
     width: 310px;
     border-radius: 15px;
+    box-shadow: 0 0 25px 8px rgba(121,249,227,0.6);
 }
 
-h1, h2 {
+h1, h2 ,.cards{
     color: #79f9e3;
     margin-bottom: 20px;
 }
+.cards{
+    display: block;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 100px;
+    margin-bottom: 55px;
+    text-align: center;
+}
+
+.card {
+    flex: 1;
+    background: rgba(0, 20, 25, 0.5);
+    border: 2px solid rgba(121,249,227,0.3);
+    box-shadow: 0 0 20px rgba(121,249,227,0.15);
+    padding: 25px;
+    margin: 25px auto;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 200px;
+    height: 250px;
+    gap: 20px;
+    }
 
 .btn {
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 25px;
     padding: 12px 30px;
     background: #00ffc6;
     color: #001111;
