--- a/css/Game.css
+++ b/css/Game.css
@@ -8,7 +8,7 @@ body {
     font-family: "Metamorphous", serif;
     font-weight: 400;
     font-style: normal;
-    background: radial-gradient(circle at top, #1a2b2e, #0a0f12, #000000);
+    background: radial-gradient(farthest-corner, #1a2b2e, #0a0f12, #000000);
     height: auto;
 }
 
@@ -112,34 +112,36 @@ main {
     justify-content: flex-end;
     height: 200px;
     width: 310px;
-    border-radius: 15px;
+    border-radius: 50px;
     box-shadow: 0 0 25px 8px rgba(121,249,227,0.6);
+    transition: 1s;
+    box-sizing: border-box;
 }
-
+#map:hover{
+    scale: 1.2;
+}
 h1, h2 ,.cards{
     color: #79f9e3;
     margin-bottom: 20px;
 }
 .cards{
-    display: block;
     font-size: 25px;
     font-weight: bold;
     margin-top: 100px;
     margin-bottom: 55px;
     text-align: center;
+
 }
 
 .card {
-    flex: 1;
+    display: flex;
+    flex-direction: row;
     background: rgba(0, 20, 25, 0.5);
     border: 2px solid rgba(121,249,227,0.3);
     box-shadow: 0 0 20px rgba(121,249,227,0.15);
     padding: 25px;
     margin: 25px auto;
     border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     max-width: 200px;
     height: 250px;
     gap: 20px;
@@ -154,6 +156,11 @@ h1, h2 ,.cards{
     border-radius: 8px;
     text-decoration: none;
     font-weight: bold;
+    transition: 1.0666s;
+}
+.btn:hover {
+    background: radial-gradient(circle at top, #1a2b2e, #0a0f12, #000000);
+    color: #fff;
 }
 
 footer {
