--- a/css/Game.css
+++ b/css/Game.css
@@ -1,16 +1,27 @@
 body {
     position: relative;
     margin: 0;
-    background: #0a0f12;
+    background-image: url("../images/main.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
     color: #d4e3e1;
     overflow-x: hidden;
     padding-top: 120px;
     font-family: "Metamorphous", serif;
-    font-weight: 400;
-    font-style: normal;
-    background: radial-gradient(farthest-corner, #1a2b2e, #0a0f12, #000000);
     height: auto;
 }
+.nav-logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #79f9e3;
+    box-shadow: 0 0 12px rgba(121,249,227,0.6);
+}
+
 
 .navbar {
     position: fixed;
@@ -183,6 +194,4 @@ footer {
     text-align: center;
     font-size: 0.9rem;
 }
-@keyframes  {
-    
-}
+
