--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,17 @@
 body{
     margin: 0;
-    background: linear-gradient(135deg, #001214, #01272a, #043f3f);
+    background-image: url(../images/tree.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
     font-family: "Metamorphous", serif;
     color: #d4e3e1;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+
 }
 
 .auth-container {
