--- a/css/Game.css
+++ b/css/Game.css
@@ -1,7 +1,7 @@
 body {
     position: relative;
     margin: 0;
-    background-image: url("../images/main.png");
+    background-image: url("images/main.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
