--- a/css/Game.css
+++ b/css/Game.css
@@ -29,7 +29,8 @@ body {
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    width: 85%;
+    width: 75%;
+    height: 35px;
     max-width: 1100px;
 
     display: flex;
