--- a/css/login.css
+++ b/css/login.css
@@ -11,9 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-
 }
-
 .auth-container {
     background: rgba(0, 20, 25, 0.7);
     backdrop-filter: blur(10px);
@@ -24,13 +22,11 @@ body{
     box-shadow: 0 0 25px rgba(121,249,227,0.15);
     text-align: center;
 }
-
 .auth-container h2 {
     color: #79f9e3;
     margin-bottom: 25px;
-    font-size: 1.5rem;
+    font-size: 25px;
 }
-
 .auth-container input {
     width: 100%;
     padding: 12px;
@@ -39,14 +35,14 @@ body{
     border: 1px solid rgba(121,249,227,0.3);
     border-radius: 8px;
     color: #79f9e3;
-    font-size: 0.95rem;
+    font-size: 14px;
 }
 
 .auth-container input::placeholder {
-    color: #8feee0;
+    color: white;
 }
 
-.auth-btn {
+.Log {
     width: 100%;
     padding: 12px;
     margin-top: 15px;
@@ -58,21 +54,18 @@ body{
     cursor: pointer;
     transition: 0.3s;
 }
-
-.auth-btn:hover {
+.Log:hover {
     opacity: 0.8;
 }
 
 .switch {
     margin-top: 20px;
-    font-size: 0.9rem;
+    font-size: 14px;
 }
-
 .switch a {
     color: #79f9e3;
     text-decoration: none;
 }
-
 .switch a:hover {
     text-decoration: underline;
 }
