--- a/css/Game.css
+++ b/css/Game.css
@@ -256,6 +256,9 @@ footer {
     from { opacity: 0; transform: translateX(50px); }
     to { opacity: 1; transform: translateX(0); }
 }
+article:hover {
+    transform: scale(1.03) rotate(0.7deg);
+}
 @media (max-width: 900px) {
     .hero {
         flex-direction: column;
@@ -268,10 +271,21 @@ footer {
         width: 260px;
         height: 180px;
     }
+    article {
+        max-width: 300px;
+        height: auto;
+    }
 }
 @media (max-width: 600px) {
     .navbar {
         width: 95%;
+        padding: 15px 20px;
+    }
+    .cards {
+        font-size: 22px;
+    }
+    h1 {
+        font-size: 25px;
     }
 }
 
