--- a/css/signin.css
+++ b/css/signin.css
@@ -44,7 +44,7 @@ body{
     color: #8feee0;
 }
 
-.auth-btn {
+.sign{
     width: 100%;
     padding: 12px;
     margin-top: 15px;
@@ -57,7 +57,7 @@ body{
     transition: 0.3s;
 }
 
-.auth-btn:hover {
+.sign:hover {
     opacity: 0.8;
 }
 
