--- a/css/Game.css
+++ b/css/Game.css
@@ -231,16 +231,22 @@ h1, h2, .cards {
 footer {
     background: #000;
     color: #888;
-    padding: 20px;
-    text-align: center;
+    padding: 18px;
     font-size: 14px;
+    border-top: 2px solid gray;
+}
+footer p {
+    text-align: center;
 }
 .footer-links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    top: 20px;
+    background: #000;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
+    margin-bottom: 80px;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    text-align: center;
 }
 .footer-links a {
     font-size: 17px;
